--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="conteiner header_flex">
     <div>
         <a href="">
-            <img src="./img/logo.svg.svg" alt="logo">
+            <img src="./img/logo.svg" alt="logo">
         </a>
     </div>
     <nav class="nav">
@@ -65,7 +65,7 @@
 
     </div>
     <div>
-        <img src="./img/firstmen.png.png" alt="firstmen">
+        <img src="./img/firstmen.png" alt="firstmen">
 
     </div>
 </div>
@@ -74,7 +74,7 @@
     <div class="conteiner">
     <div>
         <a href="#">
-            <img src="./img/logo.svg.svg" alt="logo">
+            <img src="./img/logo.svg" alt="logo">
         </a>
     </div>
     <nav class="nav">
